
- The GDB `Open Source' dialog has a filter.

- Dragging breakpoints works nicely with scrolling.


User Interface
--------------

- Insensitive items have a 3-D `emboss' look, making them more legible.

- `Flat' toolbar buttons keep their border after having been activated.

- Toolbar buttons appear in color when entered.  See the
  `activeButtonColorKey' resource for details.

- The function keys F2-F9 are bound to frequently used commands:

	F2 Run
	F3 Run Again
	F4 Kill
	F5 Step		Shift+F5 Step Instruction
	F6 Next		Shift+F6 Next Instruction
	F7 Until
	F8 Finish
	F9 Continue	Shift+F9 Continue Without Signal

  The bindings from DDD 3.0 and earlier (Ctrl+E for Run, Ctrl+I for
  Step, etc.) are still available.


Debuggers, Languages, and Platforms
-----------------------------------

- Improved JDB class search.  Using JDB, `File->Open Class' no longer
  searches the class path for .java source files; instead, it searches
  for .class files and returns all classes with accessible .java
  sources.  Subdirectories are also searched.

- Further improved FORTRAN support.  When looking up FORTRAN functions
  and variables, DDD also tries to append two trailing underscores
  `__', as generated by g77 on several architectures.

- You can build DDD out-of-the box on Windows 95 and NT (using
  cygwin32, http://www.cygnus.com/misc/gnu-win32/).  This is useful
  for people using GCC and GDB on Windows, or for people using DDD as
  a front-end to JDB.  A Windows X server is required.


Settings
--------

- History customization.  You can customize the number of items in
  pop-down value histories as well as the way they are sorted.  See
  the `popdownHistorySize' and `sortPopdownHistory' resources.

- Using `Status->Signals->All Signals', you can modify signal handling 
  for all signals at once.

- Signal settings are saved with the current session.

- DBX breakpoints are saved referring to the function name, if possible.
  This is useful when working with derived sources.